--- a/styles.css
+++ b/styles.css
@@ -125,12 +125,11 @@ body{
 }
 #projects{
     color: var(--color-text);
-    height: 100vh;
+    height: 70vh;
     width: 100%;
 
 }
 .exposicion-con-fondo {
-
     background-size: cover; /* Ajusta el tamaño de la imagen para cubrir todo el div */
 }
 
@@ -138,7 +137,7 @@ body{
     display: flex;
  /* Centrar verticalmente */
     justify-content: center; /* Centrar horizontalmente */
-    height: 100vh;
+    height: 70vh;
     background-color: rgba(5, 5, 5, 0.692);
 }
 
@@ -150,6 +149,8 @@ body{
     padding: 20px; 
     width: 70%; 
     height: 60%;
+    border-radius: 10px;
+    background-color: #00000059;
 }
 .img-style{
     width: 150px;
@@ -181,6 +182,12 @@ body{
 }
 #studies img{
     width: 90%;
+}
+#parrafo-exposicion{
+    text-align:justify;
+}
+.btn-desplazamiento{
+    display: none;
 }
 @media (max-width: 576px) {
     .navbar_menu {
@@ -219,5 +226,17 @@ body{
     #close-icon div:nth-child(2) {
         transform: rotate(-45deg) translate(2px, -1px);
     }
+    .img-style{
+        width: 50px;
+        height: 40px;
+        padding: 4px;
+        background-color: var(--color-extra);
+        margin: 3px;
+        border-radius: 10px;
+    }
+    .btn-desplazamiento{
+        display: block;
+    }
+
 
 }
