--- a/stylesOscuro.css
+++ b/stylesOscuro.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Playpen Sans', cursive;
+    transition: 0.5s;
 }
 :root{
     --color-Backg:#1E1E1E;
@@ -174,8 +175,7 @@ body{
     transition:  0.9s;
 }
 .url-project:hover{
-    transform: scale(1.4);
-    color: var(--color-extra);
+    transform: scale(1.2);
 }
 #experiencia img{
     width: 90%;
@@ -236,6 +236,17 @@ body{
     }
     .btn-desplazamiento{
         display: block;
+        margin-top: 5px;
+        cursor: pointer;
+        background-color: var(--color-detail);
+        border: none;
+        border-radius: 10px;
+        padding: 10px;
+        color: var(--color-text);
+        transition: 0.5s;
+    }
+    .btn-desplazamiento:hover{
+        background-color: var(--color-backg-image);
     }
 
 
