--- a/stylesOscuro.css
+++ b/stylesOscuro.css
@@ -72,8 +72,9 @@ body{
     font-size: small;
 }
 .bg-image{
-    background-image: url(https://res.cloudinary.com/manuelcodex/image/upload/v1688821217/manuel.alcazar_a_Valknut_logo_with_a_black_background_each_of_t_29acc2a5-483b-49f7-8fd5-ba2751df2699_qexuv3.png) ;
-    background-size: cover;
+    /* background-image: url(https://res.cloudinary.com/manuelcodex/image/upload/v1688821217/manuel.alcazar_a_Valknut_logo_with_a_black_background_each_of_t_29acc2a5-483b-49f7-8fd5-ba2751df2699_qexuv3.png) ;
+    background-size: cover; */
+    background-color: var(--color-Backg);
 }
 
 .mainTitle{
@@ -122,15 +123,13 @@ body{
 .div-item:hover{
     box-shadow: 5px 3px 10px 10px #345e37;
     margin-top: 10px;
+    cursor: pointer;
 }
  .div-item img{
     width: 150px;
     height: 150px;
     border-radius: 10px;
 
-}
-.div-item:hover{
-    cursor: pointer;
 }
 
 .div-item > h4{
@@ -142,6 +141,28 @@ body{
     color: white; /* Color del texto */
     padding: 10px; /* Espaciado alrededor del texto */
     display: none;
+}
+.div-experience{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid var(--color-Backg);
+    border-radius: 10px;
+    text-align: center;
+    margin: 1em;
+    width: 150px;
+    height: 150px;
+}
+.div-experience img{
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
+
+}
+.div-experience:hover{
+    box-shadow: 5px 3px 10px 10px #345e37;
+    margin-top: 10px;
+    cursor: pointer;
 }
 #projects{
     color: var(--color-text);
