--- a/stylesOscuro.css
+++ b/stylesOscuro.css
@@ -233,6 +233,33 @@ body{
 .btn-desplazamiento{
     display: none;
 }
+.divDos{
+    color: var(--color-text);
+
+    width: 100%;
+}
+.card-divDos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1em auto;
+    padding: 20px; 
+    width: 70%; 
+    height: 20%;
+    border-radius: 10px;
+    background-color: var(--color-backg-image);
+}
+.title-divDos{
+   font-weight: 900;
+}
+.second-divDos{
+    display: flex;
+    align-items: center;
+}
+.imagen-divDos{
+    width: 20%;
+
+}
 @media (max-width: 576px) {
     .navbar_menu {
         display: none;
