--- a/stylesOscuro.css
+++ b/stylesOscuro.css
@@ -85,18 +85,18 @@ body{
     text-align: center;
     margin: 2em auto 4em auto;
     padding: 30px;
-    background-color: #1e1e1ebe;
+    background-color: var(--color-Backg);
     color: var(--color-text);
+    height: 50vh;
+    transition: 1s ease-in-out;
 }
-.main-text{
-    word-break: break-word;
-  line-break: normal;
-  hyphens: auto;
-  overflow-wrap: break-word;
+.mainTitle:hover{
+    transform: translateY(62px);
 }
 .main-photo{
-    width: 50%;
+    width: 30%;
     border-radius: 10px;
+    margin-left: 20px;
 
 }
 
@@ -179,7 +179,7 @@ body{
  /* Centrar verticalmente */
     justify-content: center; /* Centrar horizontalmente */
     height: 70vh;
-    background-color: rgba(5, 5, 5, 0.692);
+    background-color: var(--color-Backg)
 }
 
 .card-projects{
@@ -191,7 +191,7 @@ body{
     width: 70%; 
     height: 60%;
     border-radius: 10px;
-    background-color: #00000059;
+    background-color: var(--color-menu)
 }
 .img-style{
     width: 150px;
@@ -212,14 +212,16 @@ body{
 .url-project{
     color: var(--color-text);
     text-decoration: none;
-    transition:  0.9s;
+    transition:  0.5s;
     margin-top: 15px;
-    background-color: var(--color-backg-image);
+    background-color: var(--color-detail);
+    border: 2px solid var(--color-detail);
     border-radius: 10px;
     padding: 5px;
 }
 .url-project:hover{
-    transform: scale(1.2);
+    background-color: var(--color-Backg);
+    border: 2px solid var(--color-backg-image);
 }
 #experiencia img{
     width: 90%;
@@ -227,8 +229,14 @@ body{
 #studies img{
     width: 90%;
 }
+#contact img{
+    width: 90%;
+}
 #parrafo-exposicion{
     text-align:justify;
+}
+#titulo-exposicion{
+    font-weight: 900;
 }
 .btn-desplazamiento{
     display: none;
@@ -241,24 +249,93 @@ body{
 .card-divDos{
     display: flex;
     flex-direction: column;
+    margin: 1em auto;
+    padding: 20px; 
+    width: 70%; 
+    height: 20%;
+    border-radius: 10px;
+    background-color: var(--color-menu)
+}
+
+.title-divDos{
+    font-weight: 900;
+    text-align: center;
+ }
+ .second-divDos{
+     display: flex;
+     align-items: center;
+ }
+ .second-divDos > ul {
+     list-style:none;
+     margin-left: 10px;
+ }
+ .li-divDos{
+     margin-bottom: 5px;
+     padding: 10px;
+     border-radius: 10px;
+     border-bottom: 5px solid var(--color-backg-image);
+ }
+ .imagen-divDos{
+     width: 20%;
+ }
+ .form-divDos{
+    display: flex;
+    flex-direction: column;
     align-items: center;
     margin: 1em auto;
     padding: 20px; 
     width: 70%; 
     height: 20%;
     border-radius: 10px;
-    background-color: var(--color-backg-image);
+    background-color: var(--color-menu);
 }
-.title-divDos{
-   font-weight: 900;
+.form-label{
+    width: 90%;
+    text-align: center;
+    margin-top: 5px;
+    font-weight: 700;
 }
-.second-divDos{
+.form-input{
+    width: 90%;
+    text-align: center;
+    padding: 7px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    border: 1px solid #ccc; /* Puedes ajustar esto según tus preferencias */
+    box-shadow: none; 
+}
+.form-textarea{
+    width: 90%;
+    text-align: center;
+    box-sizing: border-box;
+    border-radius: 10px;
+    border: 1px solid #ccc; /* Puedes ajustar esto según tus preferencias */
+    box-shadow: none; 
+}
+.form-button{
+        display: block;
+        margin-top: 15px;
+        cursor: pointer;
+        background-color: var(--color-detail);
+        border: 2px solid var(--color-menu);
+        border-radius: 10px;
+        padding: 10px;
+        color: var(--color-text);
+        transition: 0.5s;
+    }
+    .form-button:hover{
+        background-color: var(--color-menu);
+        border: 2px solid var(--color-backg-image);
+    }
+ .footer{
     display: flex;
+    flex-direction: column;
     align-items: center;
+    background-color: var(--color-menu);
 }
-.imagen-divDos{
-    width: 20%;
-
+ .text-footer{
+    text-align: center;
+    color: var(--color-text);
 }
 @media (max-width: 576px) {
     .navbar_menu {
@@ -291,6 +368,9 @@ body{
         background-color: var(--color-Backg);
         color: var(--color-text);
     }
+    .mainTitle:hover{
+        transform: translateY(0px) translateX(0px);
+    }
     .main-photo{
         width: 80%;
         border-radius: 10px;
@@ -304,7 +384,26 @@ body{
         margin: 6px 0;
         transition: 0.9s;
     }
-
+    .imagen-divDos{
+        display: none;
+    }
+    .title-divDos{
+        font-size: medium;
+        font-weight: 600;
+     }
+     .second-divDos{
+         display: flex;
+         align-items: center;
+     }
+     .second-divDos > ul {
+         list-style:none;
+     }
+     .li-divDos{
+        margin-bottom: 5px;
+        padding: 10px;
+        border-radius: 10px;
+        border-bottom: 5px solid var(--color-backg-image);
+    }
     /* Estilos para el ícono de cerrar (X) */
     #close-icon div:nth-child(1) {
         transform: rotate(45deg) translate(7px, 7px);
@@ -326,14 +425,15 @@ body{
         margin-top: 15px;
         cursor: pointer;
         background-color: var(--color-detail);
-        border: none;
+        border: 2px solid var(--color-menu);
         border-radius: 10px;
         padding: 10px;
         color: var(--color-text);
         transition: 0.5s;
     }
     .btn-desplazamiento:hover{
-        background-color: var(--color-backg-image);
+        background-color: var(--color-menu);
+        border: 2px solid var(--color-backg-image);
     }
 
 
